Removes logo image from footer, re-align.

--- a/components/css/lib/navigation.css
+++ b/components/css/lib/navigation.css
@@ -4,7 +4,7 @@
 	 * @class
 	 * @name .fs-navigation-element
 	 * @type element
-	 * @description Target elmement
+	 * @description Target element
 	 */
 /**
 	 * @class
@@ -209,7 +209,7 @@
 		 * @class
 		 * @name .fs-navigation-push-content.fs-navigation-animated
 		 * @type modifier
-		 * @description Indicates animted state
+		 * @description Indicates animated state
 		 */
   /**
 		 * @class
