--- a/components/output/style.css
+++ b/components/output/style.css
@@ -372,6 +372,7 @@ h2 a.jumplink:after {
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /*noinspection CssNoGenericFontName*/
   font-family: FontAwesome;
   font-style: normal;
   line-height: 1;
@@ -495,7 +496,8 @@ h2 a.jumplink:after {
   background-repeat: repeat; }
   #footer .address {
     color: #ffffff;
-    margin-top: 50px; }
+    margin-bottom: 5px;
+    margin-top: 65px; }
     @media screen and (max-width: 740px) {
       #footer .address {
         margin-top: 10px; } }
@@ -519,7 +521,7 @@ h2 a.jumplink:after {
   #footer .phone-number a {
     color: #ffffff; }
   #footer .footer-logo {
-    margin: 40px auto 20px;
+    margin: 10px auto 0px auto;
     text-align: center; }
     @media screen and (max-width: 740px) {
       #footer .footer-logo {
@@ -541,7 +543,7 @@ h2 a.jumplink:after {
     color: #ffcc00; }
   #postfooter .copyright {
     display: inline-block;
-    text-align: right;
+    text-align: left;
     color: #b1b1b4;
     margin-bottom: 15px; }
     @media screen and (max-width: 740px) {
