--- a/components/templates/app-interior-link.html
+++ b/components/templates/app-interior-link.html
@@ -29,15 +29,15 @@
 
                         <div class="styled-control-group">
                             <label for="firstName">First Name</label>
-                            <input id="firstName" type="text" placeholder="First Name" class="styled-input-full">
+                            <input id="firstName" type="text" placeholder="First Name" class="styled-input-half">
                         </div>
                         <div class="styled-control-group">
                             <label for="middleName">Middle Name</label>
-                            <input id="middleName" type="text" placeholder="Middle Name" class="styled-input-full">
+                            <input id="middleName" type="text" placeholder="Middle Name" class="styled-input-half">
                         </div>
                         <div class="styled-control-group">
                             <label for="lastName">Last Name</label>
-                            <input id="lastName" type="text" placeholder="Last Name" class="styled-input-full">
+                            <input id="lastName" type="text" placeholder="Last Name" class="styled-input-half">
                         </div>
 
                         <p class="styled-form-message">List other Last Name(s) or Surname(s), if any, that may appear
@@ -45,7 +45,7 @@
 
                         <div class="styled-control-group">
                             <label for="otherName">Other Last Name(s) or Surname(s)</label>
-                            <input id="otherName" type="text" placeholder="Other Names" class="styled-input-full">
+                            <input id="otherName" type="text" placeholder="Other Names" class="styled-input-half">
                             <a href="#" class="styled-controls styled-form-message-block">Add more</a>
 
                         </div>
@@ -56,7 +56,7 @@
                     <fieldset>
                         <div class="styled-control-group">
                             <label for="citizenship">Country of Citizenship</label>
-                            <input id="citizenship" type="text" placeholder="Citizenship" class="styled-input-full">
+                            <input id="citizenship" type="text" placeholder="Citizenship" class="styled-input-half">
                         </div>
 
                         <div class="styled-control-group">
