--- a/components/templates/welcome.html
+++ b/components/templates/welcome.html
@@ -53,9 +53,9 @@
                             <li>Application</li>
                             <li>Essays</li>
                             <li>Application Fee</li>
-                            <li>Official GMAT ot GRE Score</li>
+                            <li>Official GMAT or GRE Score</li>
                             <li>Resume</li>
-                            <li>Officil YOEFL or IELTS Score</li>
+                            <li>Official TOEFL or IELTS Score</li>
                             <li>Financial Verification</li>
                             <li>Official Transcripts</li>
                         </ul>
