--- a/components/css/sass/_common.scss
+++ b/components/css/sass/_common.scss
@@ -341,6 +341,7 @@ h2 a.jumplink:after {
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /*noinspection CssNoGenericFontName*/
   font-family: FontAwesome;
   font-style: normal;
   line-height: 1;
@@ -475,7 +476,8 @@ h2 a.jumplink:after {
 
   .address {
     color: $white;
-    margin-top: 50px;
+    margin-bottom: 5px;
+    margin-top: 65px;
     @media screen and (max-width: $break-medium) {
       margin-top: 10px;
     }
@@ -505,7 +507,7 @@ h2 a.jumplink:after {
     color: $white;
   }
   .footer-logo {
-    margin: 40px auto 20px;
+    margin: 10px auto 0px auto;
     text-align: center;
     @media screen and (max-width: $break-medium) {
       text-align: left;
@@ -531,7 +533,7 @@ h2 a.jumplink:after {
   }
   .copyright {
     display: inline-block;
-    text-align: right;
+    text-align: left;
     color: $light-grey;
     margin-bottom: 15px;
     @media screen and (max-width: $break-medium) {
